# serve-rs

./: 404.html  Cargo.toml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
Getting started/: index.html
Installation/: index.html
docs/: Getting started.md  Gettting Started.md  index.md
search/: search_index.json
servers/: __init__.py
src/: lib.rs
src/pkg/: server.rs  wsgi.rs
src/pkg/wsgi/: request.rs  response.rs
